# fluentbit-wasm-filter-kubernetes

./: Cargo.toml  Makefile  README.md  config.json  docker-compose.yaml  filter.go  filter_test.go  go.mod  go.sum  test-filter.conf
.github/workflows/: build.yaml  release.yaml
pkg/: filter_rust.js  filter_rust_bg.js  filter_rust_bg.wasm  filter_rust_bg.wasm.d.ts
src/: config.json  config.rs  lib.rs
