[package]
name = "filter_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.1"
libc = "0.2"
regex = "1.7"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
test-case = "3.0.0"
