[package]
name = "filter_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "none"
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 3
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.1"
libc = "0.2"
regex = "1.7"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
test-case = "3.0.0"
